dist/k8s/staging/frontend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: docker.pkg.github.com/corona-gym/corona-gym/frontend:latest
        readinessProbe:
          httpGet:
            path: /js/app.js
            port: 8000
        ports:
        - containerPort: 8000
      imagePullSecrets:
      - name: regcred
