dist/k8s/staging/db-service.yml
apiVersion: v1
kind: Service
metadata:
  name: db-service
spec:
  type: NodePort
  selector:
    app: db
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
